removed download cv button

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello! </span> I'm
 			            <h1 class="mb-4 mt-3"><span class="name-outlier">ISHA</span><br><span class="name-solid">PATRO</span></h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Download CV</a></p>
+			            <!-- <p><a href="#" class="btn btn-primary py-3 px-4">Download CV</a></p> -->
 		            </div>
 		          </div>
 	        	</div>
