--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 						<span class="icon-github"></span>
 					</div>
 				</a>
-          		<h3 class="mb-4">Website</h3>
+          		<h3 class="mb-4">Github</h3>
 	            <p><a href="https://github.com/IshaPatro">IshaPatro</a></p>
 	        </div>
           </div>
