--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello! </span> I'm
 			            <h1 class="mb-4 mt-3"><span class="name-outlier">ISHA</span><br><span class="name-solid">PATRO</span></h1>
-			            <!-- <p><a href="#" class="btn btn-primary py-3 px-4">Download CV</a></p> -->
+			            <p><a href="resume.pdf" download class="btn btn-primary py-3 px-4">Download CV</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -88,7 +88,7 @@
 				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
 					<div class="row justify-content-start pb-3">
 						<div class="col-md-12 heading-section ftco-animate">
-							<p>Outside of work, I channel my creativity and energy into a variety of hobbies. Whether I'm creating vibrant <span class="hobby">paintings</span>, mastering intricate <span class="hobby">classical dance</span> routines, performing traditional <span class="hobby">tribal dance</span>, or crafting aromatic <span class="hobby">candles</span>, my free time is a testament to my love for the arts and hands-on projects. Leading the <span class="hobby">DIY club</span> in college allowed me to innovate and inspire others. My roles as a <span class="hobby">school leader</span> and <span class="hobby">NCC cadet</span> have further refined my leadership and discipline. These experiences have shaped me, driving my ambition to leave a lasting impact.</p>
+							<p>Outside of work, I channel my creativity and energy into a variety of hobbies. Whether I'm creating vibrant <span class="hobby">paintings</span>,producing captivating <span class="hobby">digital art</span>, mastering intricate <span class="hobby">classical dance</span> routines, performing traditional <span class="hobby">tribal dance</span>, or crafting aromatic <span class="hobby">candles</span>, my free time is a testament to my love for the arts and hands-on projects. Leading the <span class="hobby">DIY club</span> in college allowed me to innovate and inspire others. My roles as a <span class="hobby">school leader</span> and <span class="hobby">NCC cadet</span> have further refined my leadership and discipline. These experiences have shaped me, driving my ambition to leave a lasting impact.</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Isha</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>May 21, 1999</span></li>
@@ -389,18 +389,8 @@
 						</div>
 					</div>
 				</div>
-  				<!-- <div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
-    				</div>
-  				</div> -->
-
 				<div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/mintedWealth.webp);">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
 						<a href="https://mintedwealth.netlify.app/" class="overlay"></a>
 						<div class="text text-center p-4">
 							<h3><a href="https://mintedwealth.netlify.app/">Knowledge Graphs from Investopedia</a></h3>
@@ -408,38 +398,29 @@
 						</div>
 					</div>
 				</div>
-
-    				<!-- <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
-	    				</div>
-    				</div> -->
-    			</div>
-    			<!-- <div class="col-md-4">
-    				<div class="row">
-    					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
-			    				</div>
-		    				</div>
-	    				</div>
-	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
-		    					<div class="overlay"></div>
-			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
-			    				</div>
-		    				</div>
-	    				</div>
-    				</div>
-    			</div> -->
-    		</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3>Cloud Generator - CG0R</h3>
+							<p>Designed an autonomous floating buoy system to clear oil spills and accelerate cloud formation.</p>
+							<p style="color: white;">Won 1st prize, Engineering Clinics Expo FALL-2018</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.jpeg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3>Autonomous humanoid robot</h3>
+							<p>Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
+							<p style="color: white;">Won 1st Prize, Engineering Clinics Expo FALL-2017</p>
+						</div>
+					</div>
+				</div>   			
+			</div>
     	</div>
     </section>
 
@@ -563,7 +544,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Indiranagar (Lane-2), Berhampur, Odisha, India</p>
+	            <p>Shree Villa, Indiranagar, Berhampur, Odisha, India</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
