Updated publication and blog

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	          <li class="nav-item"><a href="#certification-section" class="nav-link"><span>Certification</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+			  <li class="nav-item"><a href="#publications-section" class="nav-link"><span>Publications</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
@@ -389,7 +390,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-8">
+				<!-- <div class="col-md-8">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
 						<a href="https://mintedwealth.netlify.app/" class="overlay"></a>
 						<div class="text text-center p-4">
@@ -397,9 +398,7 @@
 							<p style="color: aliceblue;">Financial knowledge graph by extracting, processing, and visualizing financial terms and definitions from Investopedia, integrating it into Obsidian for interactive exploration.</p>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="row">
+				</div> -->
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
 						<div class="overlay"></div>
@@ -420,6 +419,49 @@
 						</div>
 					</div>
 				</div>   			
+				
+			</div>
+			<!-- <div class="row">
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3>Cloud Generator - CG0R</h3>
+							<p>Designed an autonomous floating buoy system to clear oil spills and accelerate cloud formation.</p>
+							<p style="color: white;">Won 1st prize, Engineering Clinics Expo FALL-2018</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.jpeg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3>Autonomous humanoid robot</h3>
+							<p>Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
+							<p style="color: white;">Won 1st Prize, Engineering Clinics Expo FALL-2017</p>
+						</div>
+					</div>
+				</div>   			
+			</div> -->
+    	</div>
+    </section>
+
+	<section class="ftco-section ftco-project" id="publications-section">
+    	<div class="container">
+    		<div class="row justify-content-center pb-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+          	<h1 class="big big-2">Publications</h1>
+            <h2 class="mb-4">Publications</h2>
+          </div>
+        </div>
+			<div class="col-md-8">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+					<a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439" class="overlay"></a>
+					<div class="text text-center p-4">
+						<h3><a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439">Knowledge Graphs from Investopedia</a></h3>
+						<p style="color: aliceblue;">Financial knowledge graph by extracting, processing, and visualizing financial terms and definitions from Investopedia, integrating it into Obsidian for interactive exploration.</p>
+					</div>
+				</div>
 			</div>
     	</div>
     </section>
@@ -451,24 +493,24 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-4 d-flex ftco-animate">
+          <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+              <a href="https://medium.com/@isha.patro.215/breaking-down-the-32nd-price-format-339bc0a7ccc8" class="block-20" style="background-image: url('images/price-format.webp'); border-radius: 70px; ">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+	                	<span class="mr-2">Sep 10, 2024</span>
+	                	<!-- <a href="#" class="mr-2">Admin</a>
+	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
 	                </p>
                 </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading"><a href="https://medium.com/@isha.patro.215/breaking-down-the-32nd-price-format-339bc0a7ccc8">Breaking Down the 32nd Bond Price Format</a></h3>
+                <p>Explained the complexities of the 32nd bond price format</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex ftco-animate">
+          <!-- <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
               </a>
