--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 			  <li class="nav-item"><a href="#publications-section" class="nav-link"><span>Publications</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blogs</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -471,8 +471,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">My Blog</h1>
-            <h2 class="mb-4">My Blog</h2>
+            <h1 class="big big-2">Blogs</h1>
+            <h2 class="mb-4">Blogs</h2>
           </div>
         </div>
         <div class="row d-flex">
