added publication video

--- a/index.html
+++ b/index.html
@@ -454,16 +454,22 @@
             <h2 class="mb-4">Publications</h2>
           </div>
         </div>
-			<div class="col-md-8">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
-					<a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439" class="overlay"></a>
-					<div class="text text-center p-4">
-						<h3><a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439">Knowledge Graphs from Investopedia</a></h3>
-						<p style="color: aliceblue;">Financial knowledge graph by extracting, processing, and visualizing financial terms and definitions from Investopedia, integrating it into Obsidian for interactive exploration.</p>
-					</div>
+		<br><br><br><br>
+		<div class="col-md-12">
+			<div class="project video ftco-animate d-flex justify-content-center align-items-center">
+				<div class="row">
+					<video autoplay muted loop class="w-100">
+						<source src="images/obsidianDemo.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+				</div>
+				<div class="row">
+					<a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439"></a>
+					<h3><a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439">Knowledge Graphs from Investopedia</a></h3>
+					<p style="color: aliceblue;">Financial knowledge graph by extracting, processing, and visualizing financial terms and definitions from Investopedia, integrating it into Obsidian for interactive exploration.</p>
 				</div>
 			</div>
-    	</div>
+		</div>
     </section>
 
 
