added link to video

--- a/index.html
+++ b/index.html
@@ -458,10 +458,12 @@
 		<div class="col-md-12">
 			<div class="project video ftco-animate d-flex justify-content-center align-items-center">
 				<div class="row">
-					<video autoplay muted loop class="w-100">
-						<source src="images/obsidianDemo.mp4" type="video/mp4">
-						Your browser does not support the video tag.
-					</video>
+					<a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439">
+						<video autoplay muted loop class="w-100">
+							<source src="images/obsidianDemo.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video>
+					</a>
 				</div>
 				<div class="row">
 					<a href="https://ijrar.org/viewfull.php?&p_id=IJRAR24C2439"></a>
