--- a/index.html
+++ b/index.html
@@ -386,7 +386,9 @@
 						<a href="https://mintedwealth.netlify.app/" class="overlay"></a>
 						<div class="text text-center p-4">
 							<h3><a href="https://mintedwealth.netlify.app/">Minted Wealth</a></h3>
-							<p style="color: aliceblue;">A comprehensive platform that provides real-time stock market data, tracks users' financial journeys from their trading start, and empowers informed financial decisions for a prosperous future</p>
+							<a href="https://mintedwealth.netlify.app/">
+								<p style="color: #D3D3D3;">A comprehensive platform that provides real-time stock market data, tracks users' financial journeys from their trading start, and empowers informed financial decisions for a prosperous future</p>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -404,7 +406,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3>Cloud Generator - CG0R</h3>
-							<p>Designed an autonomous floating buoy system to clear oil spills and accelerate cloud formation.</p>
+							<p style="color: #D3D3D3;">Designed an autonomous floating buoy system to clear oil spills and accelerate cloud formation.</p>
 							<p style="color: white;">Won 1st prize, Engineering Clinics Expo FALL-2018</p>
 						</div>
 					</div>
@@ -414,7 +416,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3>Autonomous humanoid robot</h3>
-							<p>Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
+							<p style="color: #D3D3D3;">Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
 							<p style="color: white;">Won 1st Prize, Engineering Clinics Expo FALL-2017</p>
 						</div>
 					</div>
@@ -492,8 +494,6 @@
               	<div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
 	                	<span class="mr-2">June 28, 2024</span>
-	                	<!-- <a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
 	                </p>
                 </div>
                 <h3 class="heading"><a href="https://medium.com/@isha.patro.215/unlocking-the-power-of-obsidian-vaults-with-python-a-simple-guide-to-supercharge-your-note-taking-e8c1d3011635">Unlocking the Power of Obsidian Vaults with Python</a></h3>
@@ -509,8 +509,6 @@
               	<div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
 	                	<span class="mr-2">Sep 10, 2024</span>
-	                	<!-- <a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
 	                </p>
                 </div>
                 <h3 class="heading"><a href="https://medium.com/@isha.patro.215/breaking-down-the-32nd-price-format-339bc0a7ccc8">Breaking Down the 32nd Bond Price Format</a></h3>
@@ -518,23 +516,21 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-4 d-flex ftco-animate">
+          <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+              <a href="https://medium.com/@isha.patro.215/fed-slashes-rates-what-a-half-point-cut-means-for-you-and-your-wallet-88f493d3208b" class="block-20" style="background-image: url('images/rate-cut.jpg');  border-radius: 70px; ">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+	                	<span class="mr-2">Sep 18, 2024</span>
 	                </p>
                 </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading"><a href="https://medium.com/@isha.patro.215/fed-slashes-rates-what-a-half-point-cut-means-for-you-and-your-wallet-88f493d3208b">Fed Slashes Rates</a></h3>
+                <p>What a Half-Point Cut Means for You and Your Wallet</p>
               </div>
             </div>
-          </div> -->
+          </div> 
         </div>
       </div>
     </section>
