added another project

--- a/index.html
+++ b/index.html
@@ -390,15 +390,15 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
-						<a href="https://mintedwealth.netlify.app/" class="overlay"></a>
+				 <div class="col-md-8">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/fedratecute.webp);">
+						<a href="https://ishapatro.github.io/FedRateCutAnalysis.github.io/" class="overlay"></a>
 						<div class="text text-center p-4">
-							<h3><a href="https://mintedwealth.netlify.app/">Knowledge Graphs from Investopedia</a></h3>
-							<p style="color: aliceblue;">Financial knowledge graph by extracting, processing, and visualizing financial terms and definitions from Investopedia, integrating it into Obsidian for interactive exploration.</p>
+							<h3><a href="https://ishapatro.github.io/FedRateCutAnalysis.github.io/">Fed Rate Cut 2020 vs 2024</a></h3>
+							<p style="color: aliceblue;">Analyzing the contrasting impacts of Federal Reserve rate cuts in 2020 and 2024 on markets, investor sentiment, and economic stability.</p>
 						</div>
 					</div>
-				</div> -->
+				</div> 
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
 						<div class="overlay"></div>
