added quant notes

--- a/index.html
+++ b/index.html
@@ -419,7 +419,16 @@
 						</div>
 					</div>
 				</div>   			
-				
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/notes.jpg);">
+						<div class="overlay"></div>
+						<a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay"></a>
+						<div class="text text-center p-4">
+							<h3><a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay">Quant Finance Notes</a></h3>
+							<p style="color: #D3D3D3;">This project brings together my ongoing journey in Quant Finance, where I’ve jotted down key learnings alongside Python code to build a strong foundation in the field.</p>
+						</div>
+					</div>
+				</div>   
 			</div>
 			<!-- <div class="row">
 				<div class="col-md-4">
