--- a/index.html
+++ b/index.html
@@ -365,6 +365,16 @@
 							<h3>Tableau</h3>
 						</div>
 					</div>
+					<div class="col-md-4 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>R</h3>
+						</div>
+					</div>
+					<div class="col-md-4 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>C</h3>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
