--- a/index.html
+++ b/index.html
@@ -313,67 +313,96 @@
             <h2 class="mb-4">Skills</h2>
           </div>
         </div>
-				<div class="row">
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>Python</h3>
-							<!-- <div class="progress">
-							 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-							    <span>90%</span>
-							  	</div>
-							</div> -->
-						</div>
+		<div class="row">
+			<div class="row">
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Python</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>React</h3>						
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>R</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>AG Grid</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>C</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>HTML</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>JavaScript</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>CSS</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>React</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>Javasript</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>HTML</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>Machine Learning</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>CSS</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>Data Mining</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>AG Grid</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>Tableau</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>RESTful APIs</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>R</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>AWS</h3>
 					</div>
-					<div class="col-md-4 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>C</h3>
-						</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>MongoDB</h3>
+					</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>SQL</h3>
+					</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Machine Learning</h3>
+					</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Data Mining</h3>
+					</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Large Language Models (LLM)</h3>
+					</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Tableau</h3>
+					</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Dash</h3>
+					</div>
+				</div>
+				<div class="col-md-4 animate-box">
+					<div class="progress-wrap ftco-animate">
+						<h3>Microsoft Excel</h3>
 					</div>
 				</div>
 			</div>
