--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </div>
         </div>
     		<div class="row">
-				<div class="col-md-4 text-center d-flex ftco-animate" style="height: 400px;">
+				<div class="col-md-4 text-center d-flex ftco-animate certificate">
 					<a class="services-1">
 						<div class="desc">
 							<h3 class="mb-5">AWS Practitioner</h3>
@@ -254,7 +254,7 @@
 						<img src="images/aws.png" alt="AWS Practitioner Certificate" style="width: 100%; height: 100%; object-fit: contain;">					
 					</a>
 				</div>				
-				<div class="col-md-4 text-center d-flex ftco-animate" style="height: 400px;">
+				<div class="col-md-4 text-center d-flex ftco-animate certificate">
 					<a class="services-1">
 						<div class="desc">
 							<h3 class="mb-5">Machine Learning</h3>
@@ -262,7 +262,7 @@
 						<img src="images/machine-learning.jpg" alt="Machine Learning Certificate" style="width: 100%; height: 100%; object-fit: contain;">					
 					</a>
 				</div>	
-					<div class="col-md-4 text-center d-flex ftco-animate">
+					<div class="col-md-4 text-center d-flex ftco-animate certificate">
 						<a href="#" class="services-1">
 							<div class="desc">
 								<h3 class="mb-5">Mortgage Backed Securities</h3>
@@ -271,17 +271,15 @@
 						</a>
 					</div>
 				
-					<!-- <div class="col-md-4 text-center d-flex ftco-animate">
+					<div class="col-md-4 text-center d-flex ftco-animate certificate">
 						<a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-analysis"></i>
-							</span>
 							<div class="desc">
-								<h3 class="mb-5">App Developing</h3>
+								<h3 class="mb-5">Financial Engineering and Risk Management</h3>
 							</div>
+							<img src="images/columbia.png" alt="Financial Engineering and Risk Management" style="width: 100%; height: 100%; object-fit: contain;">
 						</a>
 					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
+					<!-- <div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
 							<span class="icon">
 								<i class="flaticon-flasks"></i>
