added risk dashboard project

--- a/index.html
+++ b/index.html
@@ -462,10 +462,20 @@
 						<a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay"></a>
 						<div class="text text-center p-4">
 							<h3><a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay">Quant Finance Notes</a></h3>
-							<p style="color: #D3D3D3;">This project brings together my ongoing journey in Quant Finance, where I’ve jotted down key learnings alongside Python code to build a strong foundation in the field.</p>
+							<p style="color: #D3D3D3;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and news sentiment analysis to provide a comprehensive view of stock market risk.</p>
 						</div>
 					</div>
-				</div>   
+				</div>
+				 <div class="col-md-8">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/riskdashboard.jpg);">
+						<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/" class="overlay"></a>
+						<div class="text text-center p-4">
+							<h3><a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/">Risk</a></h3>
+							<p style="color: aliceblue;"></p>
+						</div>
+					</div>
+				</div> 
+				  
 			</div>
 			<!-- <div class="row">
 				<div class="col-md-4">
