--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/riskdashboard.jpg);">
 						<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/" class="overlay"></a>
 						<div class="text text-center p-4">
-							<h3><a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/">Risk</a></h3>
-							<p style="color: aliceblue;"></p>
+							<h3><a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/">Risk Dashboard</a></h3>
+							<p style="color: aliceblue;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and sentiment analysis of latest news to provide a comprehensive view of stock market risk.</p>
 						</div>
 					</div>
 				</div> 
