--- a/index.html
+++ b/index.html
@@ -415,68 +415,78 @@
             <h2 class="mb-4">Projects</h2>
           </div>
         </div>
-    		<div class="row">
-    			<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/mintedWealth.webp);">
-						<a href="https://mintedwealth.netlify.app/" class="overlay"></a>
-						<div class="text text-center p-4">
-							<h3><a href="https://mintedwealth.netlify.app/">Minted Wealth</a></h3>
-							<a href="https://mintedwealth.netlify.app/">
-								<p style="color: #D3D3D3;">A comprehensive platform that provides real-time stock market data, tracks users' financial journeys from their trading start, and empowers informed financial decisions for a prosperous future</p>
-							</a>
-						</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/mintedWealth.webp);">
+					<a href="https://mintedwealth.netlify.app/" class="overlay"></a>
+					<div class="text text-center p-4">
+						<a href="https://mintedwealth.netlify.app/">
+							<h3>Minted Wealth</h3>
+							<p style="color: #D3D3D3;">A comprehensive platform that provides real-time stock market data, tracks users' financial journeys from their trading start, and empowers informed financial decisions for a prosperous future</p>
+						</a>
 					</div>
 				</div>
-				 <div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/fedratecute.webp);">
-						<a href="https://ishapatro.github.io/FedRateCutAnalysis.github.io/" class="overlay"></a>
-						<div class="text text-center p-4">
-							<h3><a href="https://ishapatro.github.io/FedRateCutAnalysis.github.io/">Fed Rate Cut 2020 vs 2024</a></h3>
-							<p style="color: aliceblue;">Analyzing the contrasting impacts of Federal Reserve rate cuts in 2020 and 2024 on markets, investor sentiment, and economic stability.</p>
-						</div>
-					</div>
-				</div> 
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Cloud Generator - CG0R</h3>
-							<p style="color: #D3D3D3;">Designed an autonomous floating buoy system to clear oil spills and accelerate cloud formation.</p>
-							<p style="color: white;">Won 1st prize, Engineering Clinics Expo FALL-2018</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.jpeg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Autonomous humanoid robot</h3>
-							<p style="color: #D3D3D3;">Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
-							<p style="color: white;">Won 1st Prize, Engineering Clinics Expo FALL-2017</p>
-						</div>
-					</div>
-				</div>   			
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/notes.jpg);">
-						<div class="overlay"></div>
-						<a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay"></a>
-						<div class="text text-center p-4">
-							<h3><a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay">Quant Finance Notes</a></h3>
-							<p style="color: #D3D3D3;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and news sentiment analysis to provide a comprehensive view of stock market risk.</p>
-						</div>
-					</div>
-				</div>
-				 <div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/riskdashboard.jpg);">
-						<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/" class="overlay"></a>
-						<div class="text text-center p-4">
-							<h3><a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/">Risk Dashboard</a></h3>
-							<p style="color: aliceblue;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and sentiment analysis of latest news to provide a comprehensive view of stock market risk.</p>
-						</div>
-					</div>
-				</div> 
-				  
 			</div>
+		
+			<div class="col-md-8">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/fedratecute.webp);">
+					<a href="https://ishapatro.github.io/FedRateCutAnalysis.github.io/" class="overlay"></a>
+					<div class="text text-center p-4">
+						<a href="https://ishapatro.github.io/FedRateCutAnalysis.github.io/">
+							<h3>Fed Rate Cut 2020 vs 2024</h3>
+							<p style="color: aliceblue;">Analyzing the contrasting impacts of Federal Reserve rate cuts in 2020 and 2024 on markets, investor sentiment, and economic stability.</p>
+						</a>
+					</div>
+				</div>
+			</div>
+		
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
+					<a href="#" class="overlay"></a>
+					<div class="text text-center p-4">
+						<h3>Cloud Generator - CG0R</h3>
+						<p style="color: #D3D3D3;">Designed an autonomous floating buoy system to clear oil spills and accelerate cloud formation.</p>
+						<p style="color: white;">Won 1st prize, Engineering Clinics Expo FALL-2018</p>
+					</div>
+				</div>
+			</div>
+		
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.jpeg);">
+					<a href="#" class="overlay"></a>
+					<div class="text text-center p-4">
+						<h3>Autonomous humanoid robot</h3>
+						<p style="color: #D3D3D3;">Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
+						<p style="color: white;">Won 1st Prize, Engineering Clinics Expo FALL-2017</p>
+					</div>
+				</div>
+			</div>
+		
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/notes.jpg);">
+					<a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay"></a>
+					<div class="text text-center p-4">
+						<a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb">
+							<h3>Quant Finance Notes</h3>
+							<p style="color: #D3D3D3;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and news sentiment analysis to provide a comprehensive view of stock market risk.</p>
+						</a>
+					</div>
+				</div>
+			</div>
+		
+			<div class="col-md-8">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/riskdashboard.jpg);">
+					<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/" class="overlay"></a>
+					<div class="text text-center p-4">
+						<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/">
+							<h3>Risk Dashboard</h3>
+							<p style="color: aliceblue;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and sentiment analysis of latest news to provide a comprehensive view of stock market risk.</p>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 			<!-- <div class="row">
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
