--- a/index.html
+++ b/index.html
@@ -439,6 +439,18 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/riskdashboard.jpg);">
+					<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/" class="overlay"></a>
+					<div class="text text-center p-4">
+						<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/">
+							<h3>Risk Radar</h3>
+							<p style="color: aliceblue;">Risk Radar is a real-time stock dashboard using AI to assess market volatility, stock performance, and financial risks with key indicators like beta, VaR, and Sharpe Ratio.</p>
+						</a>
+					</div>
+				</div>
+			</div>
 		
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
@@ -458,30 +470,6 @@
 						<h3>Autonomous humanoid robot</h3>
 						<p style="color: #D3D3D3;">Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
 						<p style="color: white;">Won 1st Prize, Engineering Clinics Expo FALL-2017</p>
-					</div>
-				</div>
-			</div>
-		
-			<div class="col-md-4">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/notes.jpg);">
-					<a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb" class="overlay"></a>
-					<div class="text text-center p-4">
-						<a href="https://github.com/IshaPatro/QuantFinanceNotes/blob/main/QuantFinanceNotes.ipynb">
-							<h3>Quant Finance Notes</h3>
-							<p style="color: #D3D3D3;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and news sentiment analysis to provide a comprehensive view of stock market risk.</p>
-						</a>
-					</div>
-				</div>
-			</div>
-		
-			<div class="col-md-8">
-				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/riskdashboard.jpg);">
-					<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/" class="overlay"></a>
-					<div class="text text-center p-4">
-						<a href="https://ishapatro-risk-dashboard-app-vgw6f6.streamlit.app/">
-							<h3>Risk Dashboard</h3>
-							<p style="color: aliceblue;">The Risk Analysis Dashboard is an interactive web application built using Streamlit that leverages real-time financial data and sentiment analysis of latest news to provide a comprehensive view of stock market risk.</p>
-						</a>
 					</div>
 				</div>
 			</div>
