added algo-trading project

--- a/index.html
+++ b/index.html
@@ -473,6 +473,18 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="col-md-12">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/algo-trading.jpg);">
+					<a href="https://trade-pulse-sma-5a35e3311900.herokuapp.com/" class="overlay"></a>
+					<div class="text text-center p-4">
+						<a href="https://trade-pulse-sma-5a35e3311900.herokuapp.com/">
+							<h3>Trade Pulse</h3>
+							<p style="color: aliceblue;">TradePulse is a sophisticated algorithmic trading platform that implements SMA-based trading strategies for the forex market, specifically for EUR/USD currency pair on OANDA. The platform features a real-time dashboard for monitoring trades, visualizing price movements, and tracking performance metrics.</p>
+						</a>
+					</div>
+				</div>
+			</div>
 		</div>
 		
 			<!-- <div class="row">
