--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 					<div class="text text-center p-4">
 						<a href="https://trade-pulse-sma-5a35e3311900.herokuapp.com/">
 							<h3>Trade Pulse</h3>
-							<p style="color: aliceblue;">TradePulse is a sophisticated algorithmic trading platform that implements SMA-based trading strategies for the forex market, specifically for EUR/USD currency pair on OANDA. The platform features a real-time dashboard for monitoring trades, visualizing price movements, and tracking performance metrics.</p>
+							<p style="color: aliceblue;">TradePulse is an algorithmic trading platform that implements SMA-based trading strategies for the EUR/USD forex pair on OANDA. It features a real-time dashboard for monitoring trades, visualizing price movements with technical indicators, and includes machine learning-based price prediction capabilities to assist with trading decisions.</p>
 						</a>
 					</div>
 				</div>
