added tariff project

--- a/index.html
+++ b/index.html
@@ -474,13 +474,24 @@
 				</div>
 			</div>
 
-			<div class="col-md-12">
+			<div class="col-md-8">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/algo-trading.jpg);">
-					<a href="https://trade-pulse-sma-5a35e3311900.herokuapp.com/" class="overlay"></a>
+					<a href="https://algo-trading-4p6d.onrender.com/" class="overlay"></a>
 					<div class="text text-center p-4">
-						<a href="https://trade-pulse-sma-5a35e3311900.herokuapp.com/">
+						<a href="https://algo-trading-4p6d.onrender.com/">
 							<h3>Trade Pulse</h3>
 							<p style="color: aliceblue;">TradePulse is an algorithmic trading platform that implements SMA-based trading strategies for the EUR/USD forex pair on OANDA. It features a real-time dashboard for monitoring trades, visualizing price movements with technical indicators, and includes machine learning-based price prediction capabilities to assist with trading decisions.</p>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/tariff.png);">
+					<a href="https://ishapatro-echoesofliberationday-app-sohfck.streamlit.app/" class="overlay"></a>
+					<div class="text text-center p-4">
+						<a href="https://ishapatro-echoesofliberationday-app-sohfck.streamlit.app/">
+							<h3>Echoes of Liberation Day</h3>
+							<p style="color: aliceblue;">An AI-powered project that generates dynamic financial reports by analyzing real-time stock market data and news</p>
 						</a>
 					</div>
 				</div>
