added projects and blogs

--- a/index.html
+++ b/index.html
@@ -498,18 +498,17 @@
 			</div>
 		</div>
 		
-			<!-- <div class="row">
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cloudGen.jpeg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Cloud Generator - CG0R</h3>
-							<p>Designed an autonomous floating buoy system to clear oil spills and accelerate cloud formation.</p>
-							<p style="color: white;">Won 1st prize, Engineering Clinics Expo FALL-2018</p>
-						</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/global-trade-dominance.gif);">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>Global Trade Dominance</h3>
+						<p>Built an interactive data project visualizing global trade shifts from 2000–2024, showing China’s rise as the top trade partner for 149 countries.</p>
 					</div>
 				</div>
-				<div class="col-md-4">
+			</div>
+				<!-- <div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.jpeg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
@@ -606,6 +605,21 @@
               </div>
             </div>
           </div> 
+		  <div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry">
+			<a href="https://medium.com/@isha.patro.215/the-ultimate-guide-to-building-animated-globe-visualizations-for-your-data-projects-4b64a71477be" class="block-20" style="background-image: url('images/spinning-globe.gif');  border-radius: 70px; ">
+			</a>
+			<div class="text mt-3 float-right d-block">
+				<div class="d-flex align-items-center mb-3 meta">
+				  <p class="mb-0">
+					  <span class="mr-2">Apr 14, 2025</span>
+				  </p>
+			  </div>
+			  <h3 class="heading"><a href="https://medium.com/@isha.patro.215/the-ultimate-guide-to-building-animated-globe-visualizations-for-your-data-projects-4b64a71477be">The Ultimate Guide to Building Animated Globe Visualizations for Your Data Projects</a></h3>
+			  <p>This blog briefly explains how I built the rotating globe visualization</p>
+			</div>
+		  </div>
+		</div> 
         </div>
       </div>
     </section>
