Added another project

--- a/index.html
+++ b/index.html
@@ -501,24 +501,28 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/global-trade-dominance.gif);">
-					<div class="overlay"></div>
+					<a href="https://ishapatro-global-trade-dominance-app-07fpgj.streamlit.app/" class="overlay"></a>	
 					<div class="text text-center p-4">
-						<h3>Global Trade Dominance</h3>
-						<p>Built an interactive data project visualizing global trade shifts from 2000–2024, showing China’s rise as the top trade partner for 149 countries.</p>
+						<a href="https://ishapatro-echoesofliberationday-app-sohfck.streamlit.app/">
+							<h3>Global Trade Dominance</h3>
+							<p style="color: aliceblue;">Built an interactive data project visualizing global trade shifts from 2000–2024, showing China’s rise as the top trade partner for 149 countries.</p>
+						</a>
 					</div>
+				</a>
 				</div>
 			</div>
-				<!-- <div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/robot.jpeg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Autonomous humanoid robot</h3>
-							<p>Biped Robot powered by Amazon’s Alexa with custom skills. Made possible by Raspberry Pi and Arduino.</p>
-							<p style="color: white;">Won 1st Prize, Engineering Clinics Expo FALL-2017</p>
-						</div>
+			<div class="col-md-8">
+				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/news-flashback.jpg);">
+					<a href="https://ishapatro-newsflashback-app-8oypph.streamlit.app/" class="overlay"></a>
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<a href="https://ishapatro-newsflashback-app-8oypph.streamlit.app/">
+							<h3>New Flashback</h3>
+							<p style="color: aliceblue;">Applied NLP techniques to categorize and analyze financial news. Used knowledge graphs and LLMs to uncover historical parallels and generate comparative insights from unstructured market data.</p>
+						</a>
 					</div>
-				</div>   			
-			</div> -->
+				</div>  			
+			</div>
     	</div>
     </section>
 
