--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Software Developer Engineer - II</h3>
-										<span class="company">J.P Morgan Chase & Co.- Jan 2024 - Current</span>
+										<span class="company">J.P Morgan Chase & Co.- Jan 2024 - Aug 2025</span>
 									</div>
 									<div class="timeline-body">
 										<p>Led the development and post-launch ownership of Trade Activity Monitoring (TAM) as Epic Owner, collaborating with stakeholders to achieve a 50% latency reduction and significantly improve trading floor execution efficiency.<br><br>Pioneered and architected a comprehensive Mortgage Matrix modernization initiative driving 12% latency improvement supporting $5B+ annual trading volume.</p>
@@ -171,7 +171,7 @@
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Data Analyst Intern</h3>
-										<span class="company">Octathorpe Web Consultant - Apr 2019 - Jul 20219</span>
+										<span class="company">Octathorpe Web Consultant - Apr 2019 - Jul 2019</span>
 									</div>
 									<div class="timeline-body">
 										<p>Procured and analyzed data from diverse primary and secondary sources to extract insights contributing to a 15% increase in user engagement.<br><br>Tracked Conversion, Retention, and Monetization metrics to provide a comprehensive analysis of business performance, supporting a 6% boost in revenue.</p>
@@ -199,6 +199,18 @@
 								<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
+										<h3 class="timeline-title">Master of Science in Financial Engineering</h3>
+										<span class="company">New York University, Tandon School of Engineering - Brooklyn, NY - Expected 05/27</span>
+									</div>
+									<div class="timeline-body">
+										<p>GPA: Pending, currently in first semester of program</p>
+									</div>
+								</div>
+							</li>
+							<li class="timeline-inverted animate-box">
+								<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
 										<h3 class="timeline-title">Bachelors in Computer Science</h3>
 										<span class="company">Vellore Institute of Technology, AP - Aug 2017 - Jul 2021</span>
 									</div>
@@ -207,7 +219,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="timeline-inverted animate-box">
+							<li class="timeline-unverted animate-box">
 								<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
@@ -215,11 +227,11 @@
 										<span class="company">Khalikote University - Aug 2015 - Jun 2017</span>
 									</div>
 									<div class="timeline-body">
-										<p>Scored 75% in Science in the CHSE board. Received a laptop for good marks under the Biju Yuva Sashaktikaran Yojana.</p>
+										<p>Recognized as a meritorious student by the Government of Odisha and received a laptop award under the Biju Yuva Sashaktikaran Yojana for achieving a 75% score in the CHSE Science stream.</p>
 									</div>
 								</div>
 							</li>
-							<li class="animate-box timeline-unverted">
+							<li class="timeline-inverted animate-box">
 								<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
@@ -227,7 +239,7 @@
 										<span class="company">D. A. V Public School - Aug 2003 - Jun 2015</span>
 									</div>
 									<div class="timeline-body">
-										<p>completed my high school education under the CBSE board, achieving a commendable CGPA of 9.6</p>
+										<p>Completed my high school education under the CBSE board, achieving a commendable CGPA of 9.6</p>
 									</div>
 								</div>
 							</li>
@@ -437,6 +449,7 @@
 		</div>
 	</section>
  
+
 
     <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container">
