--- a/index.html
+++ b/index.html
@@ -21,6 +21,44 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+      /* Custom navbar optimization for single line layout */
+      .navbar-nav {
+        flex-wrap: nowrap !important;
+        white-space: nowrap !important;
+      }
+      .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
+        padding-left: 12px !important;
+        padding-right: 12px !important;
+      }
+      .ftco-navbar-light .navbar-nav > .nav-item {
+        flex-shrink: 0 !important;
+      }
+      @media (max-width: 1200px) {
+        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
+          padding-left: 8px !important;
+          padding-right: 8px !important;
+        }
+      }
+      @media (max-width: 1100px) {
+        .navbar-nav {
+          font-size: 0.65rem !important;
+        }
+        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
+          padding-left: 6px !important;
+          padding-right: 6px !important;
+        }
+      }
+      @media (max-width: 1000px) {
+        .navbar-nav {
+          font-size: 0.6rem !important;
+        }
+        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
+          padding-left: 4px !important;
+          padding-right: 4px !important;
+        }
+      }
+    </style>
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -33,12 +71,13 @@
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav nav ml-auto" style="font-size: 0.8rem;">
+	        <ul class="navbar-nav nav ml-auto" style="font-size: 0.7rem; white-space: nowrap;">
           <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
           <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
           <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
           <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
           <li class="nav-item"><a href="#achievements-section" class="nav-link"><span>Achievements</span></a></li>
+          <li class="nav-item"><a href="#certification-section" class="nav-link"><span>Certifications</span></a></li>
           <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 		  <li class="nav-item"><a href="#publications-section" class="nav-link"><span>Research</span></a></li>
           <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blogs</span></a></li>
