added blog and certificate

--- a/index.html
+++ b/index.html
@@ -690,6 +690,15 @@
 				<div class="col-md-4 text-center d-flex ftco-animate certificate">
 					<a class="services-1">
 						<div class="desc">
+							<h3 class="mb-5">Bloomberg Market Concepts</h3>
+						</div>
+						<img src="images/bloomberg-certificate.png" alt="Bloomberg Market Concepts Certificate"
+							style="width: 100%; height: 100%; object-fit: contain;">
+					</a>
+				</div>
+				<div class="col-md-4 text-center d-flex ftco-animate certificate">
+					<a class="services-1">
+						<div class="desc">
 							<h3 class="mb-5">AWS Practitioner</h3>
 						</div>
 						<img src="images/aws.png" alt="AWS Practitioner Certificate"
@@ -724,26 +733,6 @@
 							style="width: 100%; height: 100%; object-fit: contain;">
 					</a>
 				</div>
-				<!-- <div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-flasks"></i>
-							</span>
-							<div class="desc">
-								<h3 class="mb-5">Branding</h3>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-ideas"></i>
-							</span>
-							<div class="desc">
-								<h3 class="mb-5">Product Strategy</h3>
-							</div>
-						</a>
-					</div> -->
 			</div>
 		</div>
 	</section>
@@ -1155,57 +1144,20 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://medium.com/@isha.patro.215/unlocking-the-power-of-obsidian-vaults-with-python-a-simple-guide-to-supercharge-your-note-taking-e8c1d3011635"
-							class="block-20" style="background-image: url('images/obsidian.png');">
-						</a>
-						<div class="text mt-3 float-right d-block">
-							<div class="d-flex align-items-center mb-3 meta">
-								<p class="mb-0">
-									<span class="mr-2">June 28, 2024</span>
-								</p>
-							</div>
-							<h3 class="heading"><a
-									href="https://medium.com/@isha.patro.215/unlocking-the-power-of-obsidian-vaults-with-python-a-simple-guide-to-supercharge-your-note-taking-e8c1d3011635">Unlocking
-									the Power of Obsidian Vaults with Python</a></h3>
-							<p>A Simple Guide to Supercharge Your Note-Taking!</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="https://medium.com/@isha.patro.215/breaking-down-the-32nd-price-format-339bc0a7ccc8"
+						<a href="https://medium.com/@isha.patro.215/a-better-way-to-resample-macroeconomic-time-series-decay-weighted-forward-fill-4e423a5546c1"
 							class="block-20"
-							style="background-image: url('images/price-format.webp'); border-radius: 70px; ">
+							style="background-image: url('images/decayWeightedFF.png'); border-radius: 70px; ">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
-									<span class="mr-2">Sep 10, 2024</span>
+									<span class="mr-2">Jan 29, 2026</span>
 								</p>
 							</div>
 							<h3 class="heading"><a
-									href="https://medium.com/@isha.patro.215/breaking-down-the-32nd-price-format-339bc0a7ccc8">Breaking
-									Down the 32nd Bond Price Format</a></h3>
-							<p>Explained the complexities of the 32nd bond price format</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry">
-						<a href="https://medium.com/@isha.patro.215/fed-slashes-rates-what-a-half-point-cut-means-for-you-and-your-wallet-88f493d3208b"
-							class="block-20"
-							style="background-image: url('images/rate-cut.jpg');  border-radius: 70px; ">
-						</a>
-						<div class="text mt-3 float-right d-block">
-							<div class="d-flex align-items-center mb-3 meta">
-								<p class="mb-0">
-									<span class="mr-2">Sep 18, 2024</span>
-								</p>
-							</div>
-							<h3 class="heading"><a
-									href="https://medium.com/@isha.patro.215/fed-slashes-rates-what-a-half-point-cut-means-for-you-and-your-wallet-88f493d3208b">Fed
-									Slashes Rates</a></h3>
-							<p>What a Half-Point Cut Means for You and Your Wallet</p>
+									href="https://medium.com/@isha.patro.215/a-better-way-to-resample-macroeconomic-time-series-decay-weighted-forward-fill-4e423a5546c1">
+									A Better Way to Resample Macroeconomic Time Series</a></h3>
+							<p>A time-aware resampling method for macroeconomic time series.</p>
 						</div>
 					</div>
 				</div>
@@ -1222,15 +1174,52 @@
 								</p>
 							</div>
 							<h3 class="heading"><a
-									href="https://medium.com/@isha.patro.215/the-ultimate-guide-to-building-animated-globe-visualizations-for-your-data-projects-4b64a71477be">The
-									Ultimate Guide to Building Animated Globe Visualizations for Your Data Projects</a>
+									href="https://medium.com/@isha.patro.215/the-ultimate-guide-to-building-animated-globe-visualizations-for-your-data-projects-4b64a71477be">
+									The Ultimate Guide to Building Animated Globe Visualizations for Your Data
+									Projects</a>
 							</h3>
 							<p>This blog briefly explains how I built the rotating globe visualization</p>
 						</div>
 					</div>
 				</div>
+				<div class="col-md-4 d-flex ftco-animate">
+					<div class="blog-entry justify-content-end">
+						<a href="https://medium.com/@isha.patro.215/breaking-down-the-32nd-price-format-339bc0a7ccc8"
+							class="block-20"
+							style="background-image: url('images/price-format.webp'); border-radius: 70px; ">
+						</a>
+						<div class="text mt-3 float-right d-block">
+							<div class="d-flex align-items-center mb-3 meta">
+								<p class="mb-0">
+									<span class="mr-2">Sep 10, 2024</span>
+								</p>
+							</div>
+							<h3 class="heading"><a
+									href="https://medium.com/@isha.patro.215/breaking-down-the-32nd-price-format-339bc0a7ccc8">
+									Breaking Down the 32nd Bond Price Format</a></h3>
+							<p>Explained the complexities of the 32nd bond price format</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 d-flex ftco-animate">
+					<div class="blog-entry justify-content-end">
+						<a href="https://medium.com/@isha.patro.215/unlocking-the-power-of-obsidian-vaults-with-python-a-simple-guide-to-supercharge-your-note-taking-e8c1d3011635"
+							class="block-20" style="background-image: url('images/obsidian.png');">
+						</a>
+						<div class="text mt-3 float-right d-block">
+							<div class="d-flex align-items-center mb-3 meta">
+								<p class="mb-0">
+									<span class="mr-2">June 28, 2024</span>
+								</p>
+							</div>
+							<h3 class="heading"><a
+									href="https://medium.com/@isha.patro.215/unlocking-the-power-of-obsidian-vaults-with-python-a-simple-guide-to-supercharge-your-note-taking-e8c1d3011635">Unlocking
+									the Power of Obsidian Vaults with Python</a></h3>
+							<p>A Simple Guide to Supercharge Your Note-Taking!</p>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
 	</section>
 
 	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
